Version 2.0 (unreleased)
- Optimized tree generation.
- Deprecated functions were removed.
- The struct node_asn_struct was removed.
  It was never intended to be used by applications since it
  reflects library internal design decisions.
- ASN1 parser code re-generated using Bison 2.4.1.
- Build with more warning flags.  Many compiler warnings fixed.
- The shared library ABI version has been incremented because
  some symbols has been removed -- see below.
- API and ABI changes since last version:
  node_asn_struct: Removed.
  LIBTASN1_VERSION: Removed, use ASN1_VERSION instead.
  libtasn1_strerror: Removed, use asn1_strerror instead.
  libtasn1_perror: Removed, use asn1_perror instead.
  MAX_NAME_SIZE: Removed, use ASN1_MAX_NAME_SIZE instead.
  MAX_ERROR_DESCRIPTION_SIZE: Removed, use
    ASN1_MAX_ERROR_DESCRIPTION_SIZE instead.

Version 1.8 (released 2009-01-16)
- Fix crlf self-test under Mingw+Wine.
- Fix build problems on platforms that lack stdint.h.
  Reported by Dagobert Michelsen <dam@opencsw.org> in
  <http://thread.gmane.org/gmane.comp.encryption.gpg.gnutls.devel/3377>.

Version 1.7 (released 2008-11-17)
- Add libtasn1-config for compatibility.
  Please stop use it as it will disappear in v2.0!
  Use standard AC_CHECK_FUNCS autoconf tests or pkg-config instead.
- Read PKCS#12 blob as binary file, fixes self-tests under Mingw.
- Fix use of __attribute__ ((deprecated)) to work on non-GCC (#106548).

Version 1.6 (released 2008-11-10)
- Fixed namespace violation for MAX_NAME_SIZE and MAX_ERROR_DESCRIPTION_SIZE.
  The new names are ASN1_MAX_NAME_SIZE and ASN1_MAX_ERROR_DESCRIPTION_SIZE.
- Fixed namespace violation for libtasn1_perror and libtasn1_strerror.
  The new names are asn1_perror and asn1_strerror.
- Fix namespace violation for LIBASN1_VERSION.
  The new name is ASN1_VERSION.
- Decoder can now decode BER encoded octet strings.
- doc: Change license on the manual to GFDLv1.3+.
- doc: Sync gdoc script with GnuTLS, changes license on man-pages to GAP.