@@ -43,6 +43,7 @@ AC_DEFUN([lgl_INIT],
   gl_LD_VERSION_SCRIPT
   AC_REQUIRE([gl_MULTIARCH])
   gl_STDINT_H
+  gl_VISIBILITY
   gl_WCHAR_H
   m4_ifval(lgl_LIBSOURCES_LIST, [
     m4_syscmd([test ! -d ]m4_defn([lgl_LIBSOURCES_DIR])[ ||
@@ -182,6 +183,7 @@ AC_DEFUN([lgl_FILE_LIST], [
   m4/longlong.m4
   m4/multiarch.m4
   m4/stdint.m4
+  m4/visibility.m4
   m4/wchar.m4
   m4/wint_t.m4
 ])
