@@ -1,4 +1,6 @@
 Version 2.0 (unreleased)
+- The shared library ABI version has been incremented because
+  some symbols has been removed -- see below.
 - Optimized tree generation.
 - Deprecated functions were removed.
 - The struct node_asn_struct was removed.
@@ -6,8 +8,8 @@ Version 2.0 (unreleased)
   reflects library internal design decisions.
 - ASN1 parser code re-generated using Bison 2.4.1.
 - Build with more warning flags.  Many compiler warnings fixed.
-- The shared library ABI version has been incremented because
-  some symbols has been removed -- see below.
+- Compiled with -fvisibility=hidden by default if supported.
+  See http://gcc.gnu.org/wiki/Visibility
 - API and ABI changes since last version:
   node_asn_struct: Removed.
   LIBTASN1_VERSION: Removed, use ASN1_VERSION instead.
